--- a/Pipfile
+++ b/Pipfile
@@ -6,12 +6,11 @@ name = "pypi"
 [packages]
 langchain = "*"
 beautifulsoup4 = "*"
-black = "*"
 tiktoken = "*"
 openai = "*"
-pinecone-client = "*"
 unstructured = "*"
 nltk = "*"
+python-magic-bin = "*"
 fastapi = "*"
 jinja2 = "*"
 uvicorn = "*"
@@ -19,8 +18,9 @@ streamlit = "*"
 streamlit-chat = "*"
 tqdm = "*"
 
+
+
 [dev-packages]
 
 [requires]
 python_version = "3.11"
-python_full_version = "3.11.0"
